--- a/static/css/style.css
+++ b/static/css/style.css
@@ -138,12 +138,13 @@ h1, h2, h3, h4, h5, h6 {
   #header .container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    #align-items: center;
   }
   #header .skills {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    #align-items: center;
+    width: 50%;
   }
 }
 
