--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,6 +8,12 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+@media (pointer: coarse) {
+	.rollover{
+		background-attachment: scroll !important;
+	} 
+}
+
 body {
   font-family: "Open Sans", sans-serif;
   background-color: #040404;
